; ModuleID = '/home/carl/AnghaBench/systemd/src/coredump/extr_coredump-vacuum.c_vacuum_candidate_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/coredump/extr_coredump-vacuum.c_vacuum_candidate_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vacuum_candidate = type { %struct.vacuum_candidate* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vacuum_candidate*)* @vacuum_candidate_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vacuum_candidate_free(%struct.vacuum_candidate* %0) #0 {
  %2 = alloca %struct.vacuum_candidate*, align 8
  store %struct.vacuum_candidate* %0, %struct.vacuum_candidate** %2, align 8
  %3 = load %struct.vacuum_candidate*, %struct.vacuum_candidate** %2, align 8
  %4 = icmp ne %struct.vacuum_candidate* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load %struct.vacuum_candidate*, %struct.vacuum_candidate** %2, align 8
  %8 = getelementptr inbounds %struct.vacuum_candidate, %struct.vacuum_candidate* %7, i32 0, i32 0
  %9 = load %struct.vacuum_candidate*, %struct.vacuum_candidate** %8, align 8
  %10 = call i32 @free(%struct.vacuum_candidate* %9)
  %11 = load %struct.vacuum_candidate*, %struct.vacuum_candidate** %2, align 8
  %12 = call i32 @free(%struct.vacuum_candidate* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @free(%struct.vacuum_candidate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
